// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Categories /> renders categories as individual elements 1`] = `
<h4
  className="Categories"
>
  <div
    className="Categories__category"
    key="a"
    onClick={[Function]}
  >
    a
  </div>
  <div
    className="Categories__category"
    key="b"
    onClick={[Function]}
  >
    b
  </div>
  <div
    className="Categories__category"
    key="c"
    onClick={[Function]}
  >
    c
  </div>
</h4>
`;

exports[`<Categories /> when "categories" is undefined it renders an empty element 1`] = `
<h4
  className="Categories"
/>
`;

exports[`<Categories /> when categories are removable it shows an X on category 1`] = `
<h4
  className="Categories"
>
  <div
    className="Categories__category"
    key="a"
    onClick={[Function]}
  >
    a
    <span>
       x
    </span>
  </div>
</h4>
`;

exports[`<Categories /> when no categories are present it renders an empty element 1`] = `
<h4
  className="Categories"
/>
`;
